# blog

./: Cargo.toml  docker-compose.yaml  go.mod  handlers.go  health_check_test.go  main.go  routes.go  server.go
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
config/: default.yaml  development.yaml  production.yaml
migrations/: 20250218044659_create_users_table.sql  20250218070152_create_posts_table.sql
scripts/: init_db.sh
src/: main.rs  settings.rs  startup.rs
src/routes/: health_check.rs  mod.rs  posts.rs
tests/: health_check.rs
tests/common/: test_helpers.rs
