[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
config = "0.15.8"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
] }
reqwest = { version = "0.12.12", features = ["json"] }
